# the-stack

./: .gitignore  Cargo.toml  README.md  benchmark.js  bun.lockb  justfile  mprocs.yaml  package-lock.json  package.json  rust-toolchain.toml  supergraph-config.yaml  supergraph-cosmo.yaml  the-stack.code-workspace
.devcontainer/: bunfig.toml  devcontainer.json  prebuild-setup.sh  prebuild-update.sh  tips.sh
.github/: deny.toml
.github/parked-workflows/: ci-build.yml  wf-build-lambda.yml  wf-check-dependencies.yml  wf-lint.yml
.github/workflows/: cd-bootstrap.yml  cd-deploy.yml  ci-build.yml  ci-check.yml  ci-lib-handler.yml  ci-lint.yml  ci-ms-gateway.yml  ci-ms-gql-products.yml  ci-ms-gql-reviews.yml  ci-ms-gql-users.yml  ci-ms-mesh.yml  ci-ms-router.yml  ci-ui-app.yml  ci-ui-internal.yml  ci.yml  deployment-bootstrap.yml  vercel-deploy.yml  vercel-deployment.yml  vercel-preview.yml  wf-build-crate.yml  wf-build-docker.yml  wf-build-lambda.yml  wf-build-ms-cosmo.yml  wf-build-ms-gateway.yml  wf-build-ms-mesh.yml  wf-build-ms-router-lambda.yml  wf-build-ms-router.yml  wf-build-ui-app.yml  wf-build-ui-internal.yml  wf-build-wasm.yml  wf-build.yml  wf-check-dependencies.yml  wf-check.yml  wf-deploy.yml  wf-lint.yml
benchmark/: bun.lockb  lambda.ts  package.json  payload-no-query.json  payload-products.json  tsconfig.json
deployment/: .gitignore  bun.lockb  cdk.json  config.ts  package.json  tsconfig.json
deployment/edge-functions/: rewrite-urls.js
deployment/end2end/: playwright.config.ts
deployment/end2end/tests/: ui-app.spec.ts  ui-internal.spec.ts
deployment/end2end/tests/ui-app/: i18n.spec.ts
deployment/end2end/tests/ui-internal/: i18n.spec.ts
deployment/lib/: deployment-stack.ts  helpers.ts  types.ts
deployment/lib/base/: domain.ts  stack.ts
deployment/lib/cloud/: domain.ts  ecr.ts  stack-certificate.ts  stack.ts
deployment/lib/global/: certificate.ts  domain.ts  stack.ts
deployment/lib/services/: app-runner.ts  cloudfront.ts  lambda.ts  router.ts  s3-website.ts  ssm-global.ts  stack-certificate.ts  stack.ts
deployment/lib/types/: config.ts
deployment/test/: base.spec.ts  cloud.spec.ts
lib-handler/: Cargo.toml
lib-handler/src/: lib.rs
lib-handler/src/handler/: lambda.rs  local.rs  mod.rs
ms-apollo/: Cargo.toml  Dockerfile  router.yaml  supergraph.graphql
ms-apollo-router/: Cargo.toml  README.md
ms-apollo-router/xtask/: Cargo.toml
ms-apollo/src/: main.rs
ms-cosmo/: README.md
ms-gateway/: README.md  bun.lockb  bunfig.toml  index.ts  package.json  rspack.config.js  tsconfig.json
ms-gateway/src/: graphql.d.ts  lambda.ts  local.ts  server.ts
ms-gql-media/: Cargo.toml  README.md
ms-gql-media/src/: main.rs  schema.rs
ms-gql-media/src/handler/: lambda.rs  local.rs  mod.rs
ms-gql-products/: Cargo.toml  README.md  db.rs
ms-gql-products/src/: main.rs  schema.graphql  schema.rs
ms-gql-reviews/: Cargo.toml  README.md
ms-gql-reviews/src/: main.rs  schema.graphql  schema.rs
ms-gql-todo/: Cargo.toml  README.md
ms-gql-todo/src/: main.rs
ms-gql-users/: Cargo.toml  README.md
ms-gql-users/src/: main.rs  schema.graphql  schema.rs
ms-mesh/: .meshrc.yml  .prettierrc.toml  README.md  bun.lockb  esbuild.config.mjs  package-lock.json  package.json  supergraph.graphql  tsconfig.json
ms-mesh/.mesh/: index.d.ts  index.js  schema.graphql
ms-mesh/.mesh/sources/Supergraph/: nonExecutableSchema.js  types.ts
ms-mesh/src/: lambda.ts
ms-queue/: Cargo.toml  README.md
ms-queue/src/: main.rs
ms-router/: .dockerignore  Cargo.toml  Dockerfile  README.md  config.json  config.yaml  cosmo.yaml  federation2.graphql  router-app.yaml  router-lambda.yaml  router.yaml  supergraph-config.yaml  supergraph-cosmo.yaml  supergraph.graphql
ms-router/src/: main.rs
ui-app/: .eslintrc.json  .gitignore  Cargo.toml  README.md  Trunk.toml  bun.lockb  global.d.ts  index.html  next.config.js  package-lock.json  package.json  tsconfig.json
ui-app/end2end/: playwright.config.ts
ui-app/public/scss/: index.scss
ui-app/src/: fetch.rs  i18n.ts  main.rs
ui-app/src/app/: layout.tsx  page.tsx
ui-app/src/app/[locale]/: layout.tsx  page.tsx
ui-internal/: .gitignore  Cargo.toml  index.html  rust-toolchain.toml  vercel.json
ui-internal/end2end/: playwright.config.ts
ui-internal/src/: app.rs
ui-internal/tests-e2e/: package.json  playwright.config.ts  tsconfig.json
ui-internal/tests-e2e/tests/: example.spec.ts
