[workspace]
resolver = "2"
members = [
  "lib-handler",
  "ms-gql-users",
  "ms-gql-products",
  "ms-gql-reviews",
  "ms-queue",
]

exclude = ["ui-internal"]

# Configurations explicitly listed here for clarity, using the best options for performance.
# - https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles
# - https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 3     # Optimize for speed.
lto = true        # Enable Link Time Optimization.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization.
strip = true      # Automatically strip symbols from the binary.
debug = false

# Use the `--profile release-debug` flag to show symbols in release mode. E.g.
# `cargo build --profile release-debug`.
[profile.release-debug]
inherits = "release"
strip = false
debug = true
