# This line needs to come before anything else in Cargo.toml
cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = [
  "lib-handler",
  "ms-gql-users",
  "ms-gql-products",
  "ms-gql-reviews",
  "ms-queue",
]

exclude = ["ui-internal"]

# Configurations explicitly listed here for clarity, using the best options for performance.
# - https://doc.rust-lang.org/cargo/reference/profiles.html#default-profiles
# - https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = 3     # Optimize for speed.
lto = true        # Enable Link Time Optimization.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization.
strip = true      # Automatically strip symbols from the binary.
debug = false

# Use the `--profile release-debug` flag to show symbols in release mode. E.g.
# `cargo build --profile release-debug`.
[profile.release-debug]
inherits = "release"
strip = false
debug = true

# Use Cranelift as the codegen backend for faster build times.
# rustup component add rustc-codegen-cranelift-preview --toolchain nightly
# https://bjorn3.github.io/2023/10/31/progress-report-oct-2023.html
# NOTE: Unavailable on ARM macOS for now.
# [profile.dev]
# codegen-backend = "cranelift"
