[package]
name = "lib-handler"
type = "lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# Can be checked using: #[cfg(feature = "local")]
local = ["dep:axum", "dep:async-graphql-axum"]

[dependencies]
# Local development.
axum = { version = "0.6", features = ["headers"], optional = true }
async-graphql-axum = { version = "6", optional = true }

# Serving our GraphQL API.
async-graphql = "6"

# Using AWS services.
lambda_http = "0.8.1"

# Utilities.
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"
