[package]
name = "ms-gql-media"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# Can be checked using: #[cfg(feature = "local")]
local = ["dep:axum", "dep:async-graphql-axum"]

[dependencies]
# Local development.
axum = { version = "0.6.0", features = ["headers"], optional = true }
async-graphql-axum = { version = "5.0.7", optional = true }
# Serving our GraphQL API.
async-graphql = "5.0.7"
# Using AWS services.
tokio = { version = "1.27.0", features = ["macros"] }
lambda_http = "0.7.3"
lambda_runtime = "0.7.3"
aws-sdk-dynamodb = "0.25.0"
aws-config = "0.55.0"
# Utilities.
simple-error = "0.3.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
