[package]
name = "ms-gql-reviews"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# Can be checked using: #[cfg(feature = "local")]
local = ["lib-handler/local", "dep:axum", "dep:async-graphql-axum"]

[dependencies]
# Local development.
lib-handler = { path = "../lib-handler" }
axum = { version = "0.6", features = ["headers"], optional = true }
async-graphql-axum = { version = "6", optional = true }

# Serving our GraphQL API.
async-graphql = "6"

# Using AWS services.
tokio = { version = "1", features = ["macros"] }
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
aws-sdk-dynamodb = "0.33.0"
aws-config = "0.56"

# Utilities.
simple-error = "0.3.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
