[package]
name = "ms-gql-todo"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.env]
RUST_LOG = "debug"
INVOKE_PORT = "3055"

[dependencies]
simple-error = "0.2.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lambda_http = "0.7.3"
lambda_runtime = "0.7.3"
aws-sdk-dynamodb = "0.24.0"
aws-config = "0.54.1"
tokio = { version = "1.25.0", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
