[package]
name = "ms-gql-todo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
simple-error = "0.3.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lambda_http = "0.7.3"
lambda_runtime = "0.7.3"
aws-sdk-dynamodb = "0.25.0"
aws-config = "0.55.0"
tokio = { version = "1.27.0", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
