[package]
name = "ms-queue"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1"
serde_derive = "1"
serde_with = { version = "3.0.0", features = ["json"], optional = true }
serde_json = "1"
aws_lambda_events = "0.10.0"
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
futures = "0.3"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
