[package]
name = "ms-router"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
lambda_http = "0.7.3"
lambda_runtime = "0.7.3"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
anyhow = "1.0.68"
apollo-router = "1.10.0"
futures = "0.3.26"
serde_json = "1"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
